add unit test for CityService functionality